Fix issue with hero text not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,8 @@ h1, h2 {
     font-size: 280%;
 }
 
+/* navigation links */
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -37,7 +39,7 @@ h1, h2 {
 
 #menu li {
     float: right;
-    list-style: none;
+    list-style-type: none;
     margin-right: 30px;
 }
 
@@ -54,12 +56,18 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero image */
+/* hero image and cover text */
 
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
@@ -83,3 +91,24 @@ h1, h2 {
         transform: scale(1.1);
     }
 }
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
+}
+
